Change `vw` to `%` to avoid horizontal scrollbar on small heights

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -4,7 +4,7 @@ header {
   position: relative;
 
   height: 156px;
-  width: 100vw;
+  width: 100%;
 
   overflow: hidden;
 
